<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/t_dark_gray"
        tools:context=".AboutFragment">

        <ImageView
            android:id="@+id/mood_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_attitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_top"
            />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_title"
            android:textSize="40sp"
            android:text="@string/app_title"
            app:layout_constraintTop_toBottomOf="@id/mood_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/title_txt"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="40dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            android:layout_marginVertical="20dp"
            >

            <TextView
                android:id="@+id/about_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/mood_tracker_desc"
                android:textSize="20sp"
                 />

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
